--- a/HTML lessons/inputs.html
+++ b/HTML lessons/inputs.html
@@ -23,6 +23,16 @@
     <input type="file" name="image" id="" />
     <input type="hidden" name="ID" value="1" />
     <br /><br />
-    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <textarea name="" id="" cols="30" rows="10" style="resize: none;"></textarea>
+
+    <br><br>
+
+    <label for="">Gender</label><br>
+    <input type="radio" name="gender" value="male"><span>Male</span>
+    <input type="radio" name="gender" value="female"><span>Female</span>
+
+    <br><br>
+
+    <input type="search" name="username" id="" placeholder="Enter user name to search..." style="width: 190px;">
   </body>
 </html>
