--- a/CSS lessons/index.html
+++ b/CSS lessons/index.html
@@ -20,10 +20,22 @@
     <!-- <i style="background-color: aquamarine;">Hello</i>  -->
 
     
-    <span id="user1">Min Thant Kyaw</span>
+    <!-- <span id="user1">Min Thant Kyaw</span>
     <br><br>
     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. A recusandae asperiores provident magni. Blanditiis asperiores autem molestias exercitationem nisi. Tempore debitis voluptas animi, similique laboriosam dolores modi ullam quia deserunt.</span><br>
     <button id="btn1">Submit</button><br>
-    <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae illum doloremque quam. Quibusdam dolores tempora veritatis ad fugiat at, unde, ipsam natus, tempore explicabo sunt ullam sed facere deleniti doloribus.</span>
+    <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae illum doloremque quam. Quibusdam dolores tempora veritatis ad fugiat at, unde, ipsam natus, tempore explicabo sunt ullam sed facere deleniti doloribus.</span> -->
+
+
+    <br><br><br>
+   <div style="display: flex; border: 1px solid black; justify-content: space-around;">
+    <img src="../mini project/assets/logo_enhanced-modified.png" alt="" width="300px" height="300px">
+    <img src="../mini project/assets/logo_enhanced-modified.png" alt="" width="300px" height="300px">
+   </div>
+
+   <br><br><br>
+   <div style="border: 1px solid black; margin: 10px;">
+    <h3>Min Thant Kyaw</h3>
+   </div>
 </body>
 </html>
