--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bootstrap Lessons</title>
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    <link
       rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
+    />
+    <!-- font awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
       crossorigin="anonymous"
-    /> -->
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg" style="background-color: #e3f2fd">
@@ -55,7 +60,6 @@
       </div>
     </nav>
 
-    <!-- about me -->
     <div
       class="d-flex flex-column justify-content-center flex-lg-row flex-md-row align-items-center mt-4"
     >
@@ -73,11 +77,136 @@
         </button>
       </div>
     </div>
-    <!-- <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script> -->
+
+    <!-- about me -->
+    <div class="mt-5">
+      <h2 class="text-center">About Me</h2>
+      <div style="margin-left: 5%; margin-top: 3%">
+        <div class="">
+          <i class="fa fa-check-circle text-success" aria-hidden="true"></i>
+          <span>Finished High School in 2022.</span>
+        </div>
+        <div class="mt-3">
+          <i class="fa fa-check-circle text-success" aria-hidden="true"></i>
+          <span>Junior FullStack Developer Intern in NK Software House</span>
+        </div>
+        <div class="mt-3">
+          <i class="fa fa-check-circle text-success" aria-hidden="true"></i>
+          <span>Certified Software Engineering.</span>
+        </div>
+      </div>
+    </div>
+
+    <!-- skills & experiences -->
+    <div class="mt-5">
+      <h2 class="text-center">Skills & Experiences</h2>
+    </div>
+
+    <div class="mt-4">
+      <div
+        class="d-flex flex-column align-items-center justify-content-center text-center"
+      >
+        <div class="d-flex justify-content-between w-75">
+          <span>HTML</span>
+          <span>75%</span>
+        </div>
+        <div
+          class="progress w-75"
+          role="progressbar"
+          aria-label="Success example"
+          aria-valuenow="25"
+          aria-valuemin="0"
+          aria-valuemax="100"
+        >
+          <div class="progress-bar bg-success" style="width: 25%"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="mt-4">
+      <div
+        class="d-flex flex-column align-items-center justify-content-center text-center"
+      >
+        <div class="d-flex justify-content-between w-75">
+          <span>CSS</span>
+          <span>50%</span>
+        </div>
+        <div
+          class="progress w-75"
+          role="progressbar"
+          aria-label="Success example"
+          aria-valuenow="25"
+          aria-valuemin="0"
+          aria-valuemax="100"
+        >
+          <div class="progress-bar bg-gradient" style="width: 50%"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="mt-4">
+      <div
+        class="d-flex flex-column align-items-center justify-content-center text-center"
+      >
+        <div class="d-flex justify-content-between w-75">
+          <span>JavaScript</span>
+          <span>45%</span>
+        </div>
+        <div
+          class="progress w-75"
+          role="progressbar"
+          aria-label="Success example"
+          aria-valuenow="25"
+          aria-valuemin="0"
+          aria-valuemax="100"
+        >
+          <div class="progress-bar bg-danger-subtle" style="width: 45%"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="mt-4">
+      <div
+        class="d-flex flex-column align-items-center justify-content-center text-center"
+      >
+        <div class="d-flex justify-content-between w-75">
+          <span>React</span>
+          <span>60%</span>
+        </div>
+        <div
+          class="progress w-75"
+          role="progressbar"
+          aria-label="Success example"
+          aria-valuenow="25"
+          aria-valuemin="0"
+          aria-valuemax="100"
+        >
+          <div class="progress-bar bg-danger" style="width: 60%"></div>
+        </div>
+      </div>
+    </div>
+
+    <div class="mt-4">
+      <div
+        class="d-flex flex-column align-items-center justify-content-center text-center"
+      >
+        <div class="d-flex justify-content-between w-75">
+          <span>C#</span>
+          <span>75%</span>
+        </div>
+        <div
+          class="progress w-75"
+          role="progressbar"
+          aria-label="Success example"
+          aria-valuenow="25"
+          aria-valuemin="0"
+          aria-valuemax="100"
+        >
+          <div class="progress-bar bg-secondary" style="width: 75%"></div>
+        </div>
+      </div>
+    </div>
+
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
 </html>
